--- a/assignment_3.ipynb
+++ b/assignment_3.ipynb
@@ -87,7 +87,8 @@
         "\n",
         "Используйте различные архитектуры энкодера, чтобы получить лучший результат по метрике, опишите ваши подходы и оставьте вывод. Попробуйте **минимум 3** разных варианта. Каждый подход оценивается в 3 балла + 1 балл за визуализацию и интерпретацию.\n",
         "\n",
-        "Вы можете использовать предложенную визуализацию, либо реализовать другим способом и получить дополнительные 2 балла к заданию."
+        "Вы можете использовать предложенную визуализацию, либо реализовать другим способом и получить дополнительные 2 балла к заданию.\n",
+        "[Форма](https://forms.gle/q6NMQs3QLJQ48dut9) для отправки до 19.03 23:59 msk"
       ]
     },
     {
